@@ -1,0 +1,7 @@
+
+use Test;
+
+plan 1;
+
+# here is a TODO test that passes
+ok(1, "TODO that passes", :todo);
