@@ -1,0 +1,7 @@
+
+module use_ok_test-0.0.1;
+
+sub it_worked { 1 }
+
+1;
+
